--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "homepage": "https://invisibles-studio.github.io/ToDoDesk",
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.10",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.0",
+    "firebase": "^9.12.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-calendar": "^3.7.0",
